--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@ num_selected: 10
     %}
 {% endif %}
 
-<!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=99b2b5&w=200&t=tt&d=w1jsZcYWX6uhqj7qrDV6Yu5EWXmHKKNJ4FzY6TnXcWs&co=f8f9fa&ct=b32b42'></script> -->
-
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&t=tt&d=VWbsJ6ckLRN2dCPC54T48qvQbG7QIyw2vy8e8JTqDrs&co=70a6cb&ct=ffffff&cmo=ff3939&cmn=52b552'></script>
 <script>
     !
     function() {
